--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body, html {
     height: 110vh;
     font-family: "Roboto Mono", monospace;
     font-optical-sizing: auto;
-    /* font-weight: <weight>; */
     font-style: normal;
     background-color:orangered;
     padding-bottom: 100%;
@@ -13,7 +12,7 @@ body, html {
 .full-card {
     background-color: rgb(209, 235, 252);
     height: 100vh;
-    margin: 5%;
+    margin: 6%;
     border: black solid 2px;
     border-radius: 20px;
     box-shadow: 25px 25px 0 #333;
@@ -27,23 +26,65 @@ body, html {
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
+    padding: 20px;
 }
 
-h1 {
-    font-size: 4rem;
-    margin: 0;
-    padding-top: 20%;
-}
-
-h2 {
-    font-size: 2rem;
-}
-
-/* @media screen and (max-width: 800px) {
-    p {
-        font-size: 2vw;
+@media screen and (min-width: 0px) {
+    .code-slash {
+        height: 8rem;
     }
-} */
+}
+
+@media screen and (min-width: 600px) {
+    h1 {
+        font-size: 2rem;
+        margin: 0;
+        padding-top: 20%;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+    p {
+        font-size: 1rem;
+    }
+    .code-slash {
+        height: 10rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    h1 {
+        font-size: 3rem;
+        margin: 0;
+        padding-top: 20%;
+    }
+    h2 {
+        font-size: 1.7rem;
+    }
+    p {
+        font-size: 1rem;
+    }
+    .code-slash {
+        height: 15rem;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    h1 {
+        font-size: 4rem;
+        margin: 0;
+        padding-top: 10%;
+    }
+    h2 {
+        font-size: 2rem;
+    }
+    p {
+        font-size: 1rem;
+    }
+    .code-slash {
+        height: 20rem;
+    }
+}
 
 /* button {
     margin: 5%;
@@ -61,13 +102,9 @@ hr {
     border: 0;
     border-radius: 15px;
     background-color: #777;
-    height: 25rem;
+    height: 15rem;
     width: 5px;
     margin: 0;
-}
-
-.code-slash {
-    width: 20rem;
 }
 
 .about {
@@ -85,11 +122,22 @@ hr {
 }
 
 .skills-section {
+
+    /* display: flex;
+    align-self: center;
+    justify-content: space-around;
+    flex-wrap: wrap; */
+
+
     display: grid;
     /* align-self: center; */
-    justify-content: space-between;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    justify-content: space-around;
+    gap: 5px;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+    /* grid-template-rows: 1fr 1fr; */
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    /* grid-template-rows: repeat(auto-fill, minmax(500px, 1fr)); */
+    /* grid-template-rows: repeat(auto-fill, 100px); */
     margin-top: 25px;
 }
 
@@ -105,7 +153,7 @@ hr {
 }
 
 .skills-icons {
-    width: 80px;;
+    width: 80px;
 }
 
 .contact {
