--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body, html {
-    color:#333;
+    color:#444;
     margin: 0;
     height: 110vh;
     font-family: "Roboto Mono", monospace;
@@ -128,14 +128,14 @@ hr {
     justify-content: space-around;
     flex-wrap: wrap; */
 
-
     display: grid;
     /* align-self: center; */
-    justify-content: space-around;
+    justify-content: center;
+    /* align-content: start; */
     gap: 5px;
     /* grid-template-columns: 1fr 1fr 1fr 1fr; */
     /* grid-template-rows: 1fr 1fr; */
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
     /* grid-template-rows: repeat(auto-fill, minmax(500px, 1fr)); */
     /* grid-template-rows: repeat(auto-fill, 100px); */
     margin-top: 25px;
@@ -145,9 +145,9 @@ hr {
     background-color:#FFF;
     border: black solid 2px;
     border-radius: 20px;
-    box-shadow: 5px 5px 0 #333;
-    width: 150px;
-    height: 150px;
+    box-shadow: 5px 5px 0 #222;
+    width: 9rem;
+    height: 9rem;
     margin-top: 25px;
     padding-top: 5px;
 }
